fix: Need to remove button spacing when grid is present

--- a/elements/pfe-navigation/src/pfe-navigation.scss
+++ b/elements/pfe-navigation/src/pfe-navigation.scss
@@ -835,6 +835,12 @@ See mixin blocks before selectors that contain the selector name and the three l
       @include breakpoint('secondary-links-expand') {
         margin-left: $gutter;
       }
+      @include breakpoint('nav-expand') {
+        margin-left: 0;
+      }
+      @include collapse('nav') {
+        margin-left: $gutter;
+      }
       @include collapse('secondary-links') {
         margin-left: 0;
       }
